began working on gui
added first page for connection on server, made test contacts

--- a/boogie/qml.qrc
+++ b/boogie/qml.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>FirstPage.qml</file>
+        <file>ContactPage.qml</file>
+        <file>ConversationPage.qml</file>
     </qresource>
 </RCC>
