--- a/boogie/qml.qrc
+++ b/boogie/qml.qrc
@@ -1,8 +1,8 @@
 <RCC>
-    <qresource prefix="/">
-        <file>main.qml</file>
-        <file>FirstPage.qml</file>
-        <file>ContactPage.qml</file>
-        <file>ConversationPage.qml</file>
+    <qresource>
+        <file>qml/main.qml</file>
+        <file>qml/FirstPage.qml</file>
+        <file>qml/ContactPage.qml</file>
+        <file>qml/ConversationPage.qml</file>
     </qresource>
 </RCC>
